--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "template_node_ts",
+    "name": "nodejs_api",
     "version": "1.0.0",
     "description": "TypeScript NodeJS Docker",
     "main": "index.js",
     "scripts": {
+        "dev": "nodemon",
         "build": "npm run lint && tsc",
         "start": "node dist/index.js",
         "lint": "eslint server/**/*.ts --quiet --fix",
         "pretest": "npm run build",
-        "test": "ava"
+        "test": "ava",
+        "docs": "typedoc server/"
     },
     "repository": {
         "type": "git",
@@ -31,19 +33,25 @@
         }
     },
     "dependencies": {
+        "express": "4.17.1",
         "winston": "3.3.3"
     },
     "devDependencies": {
+        "@types/express": "^4.17.9",
         "@types/node": "14.14.20",
         "@typescript-eslint/eslint-plugin": "4.12.0",
         "@typescript-eslint/parser": "4.12.0",
         "ava": "3.15.0",
-        "test-listen": "1.1.0",
+        "dotenv": "8.2.0",
         "eslint": "7.10.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "husky": "4.3.0",
+        "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
-        "typescript": "3.4.3",
-        "husky": "4.3.0"
+        "test-listen": "1.1.0",
+        "ts-node": "^9.1.1",
+        "typedoc": "^0.20.13",
+        "typescript": "4.0"
     }
 }
