--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
             dockerfile: Dockerfile
             args:
                 NODE: production
-                PORT: ${PORT}
+                PORT: 5000
         environment:
-            - 'PORT=${PORT}'
+            - 'PORT=5000'
         ports:
-            - '${PORT}:${PORT}'
+            - '5000:5000'
         restart: 'always'
         command: npm run start
