--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     server:
         env_file: .env
-        container_name: 'template_node_server'
+        container_name: 'nodejs_api'
         build:
             context: .
             dockerfile: Dockerfile
