--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "TypeScript NodeJS Docker",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon",
+        "dev": "npm run docs && nodemon -r dotenv/config",
         "build": "npm run lint && tsc",
         "start": "node dist/index.js",
         "lint": "eslint server/**/*.ts --quiet --fix",
@@ -14,7 +14,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/TheBumpaster/template_node_ts.git"
+        "url": "git+https://github.com/TheBumpaster/node_api.git"
     },
     "keywords": [
         "nodejs",
@@ -23,9 +23,9 @@
     "author": "Ismar Hadzic",
     "license": "SEE LICENSE IN LICENSE",
     "bugs": {
-        "url": "https://github.com/TheBumpaster/template_node_ts/issues"
+        "url": "https://github.com/TheBumpaster/node_api/issues"
     },
-    "homepage": "https://github.com/TheBumpaster/template_node_ts#readme",
+    "homepage": "https://github.com/TheBumpaster/node_api#readme",
     "husky": {
         "hooks": {
             "pre-commit": "npm run build",
@@ -33,11 +33,22 @@
         }
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
+        "connect-mongodb-session": "^2.4.1",
+        "cors": "^2.8.5",
         "express": "4.17.1",
+        "express-session": "^1.17.1",
+        "helmet": "^4.3.1",
+        "mongoose": "^5.11.11",
+        "swagger-jsdoc": "^6.0.1",
+        "swagger-ui-express": "^4.1.6",
         "winston": "3.3.3"
     },
     "devDependencies": {
+        "@types/connect-mongodb-session": "^2.4.0",
         "@types/express": "^4.17.9",
+        "@types/express-session": "^1.17.3",
         "@types/node": "14.14.20",
         "@typescript-eslint/eslint-plugin": "4.12.0",
         "@typescript-eslint/parser": "4.12.0",
@@ -47,6 +58,7 @@
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-prettier": "^3.3.1",
         "husky": "4.3.0",
+        "mockgoose": "^8.0.4",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
         "test-listen": "1.1.0",
