--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "build": "npm run lint && tsc",
         "start": "node dist/index.js",
         "lint": "eslint server/**/*.ts --quiet --fix",
-        "pretest": "npm run build",
-        "test": "ava",
+        "test": "k6 run tests/test.js",
         "docs": "typedoc server/"
     },
     "repository": {
@@ -40,6 +39,8 @@
         "express": "4.17.1",
         "express-session": "^1.17.1",
         "helmet": "^4.3.1",
+        "joi": "^17.3.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.11",
         "swagger-jsdoc": "^6.0.1",
         "swagger-ui-express": "^4.1.6",
@@ -49,15 +50,16 @@
         "@types/connect-mongodb-session": "^2.4.0",
         "@types/express": "^4.17.9",
         "@types/express-session": "^1.17.3",
+        "@types/joi": "^14.3.4",
         "@types/node": "14.14.20",
         "@typescript-eslint/eslint-plugin": "4.12.0",
         "@typescript-eslint/parser": "4.12.0",
-        "ava": "3.15.0",
         "dotenv": "8.2.0",
         "eslint": "7.10.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-prettier": "^3.3.1",
         "husky": "4.3.0",
+        "k6": "0.0.0",
         "mockgoose": "^8.0.4",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
