--- a/.github/workflows/test.k6.yml
+++ b/.github/workflows/test.k6.yml
@@ -1,13 +1,20 @@
-name: k6 cloud test run
+name: K6 Smoke Test
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v1
-            - name: Run k6 cloud test
-              uses: k6io/action@v0.1
-              with:
-                  filename: tests/test.js
-                  cloud: true
-                  token: ${{ secrets.K6_CLOUD_API_TOKEN }}
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Run local k6 test
+      uses: k6io/action@v0.1
+      with:
+        filename: tests/test.js
