--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "npm run lint && tsc",
         "start": "node dist/index.js",
         "lint": "eslint server/**/*.ts --quiet --fix",
-        "test": "k6 run tests/test.js",
+        "test": "mocha --require ts-node/register --require source-map-support/register ./tests/**/*.spec.ts --colors --full-trace --exit",
+        "k6": "k6 run tests/test.js",
         "docs": "typedoc server/"
     },
     "repository": {
@@ -47,19 +48,27 @@
         "winston": "3.3.3"
     },
     "devDependencies": {
+        "@types/chai": "^4.2.14",
+        "@types/chai-http": "^4.2.0",
         "@types/connect-mongodb-session": "^2.4.0",
         "@types/express": "^4.17.9",
         "@types/express-session": "^1.17.3",
+        "@types/faker": "^5.1.5",
         "@types/joi": "^14.3.4",
+        "@types/mocha": "^8.2.0",
         "@types/node": "14.14.20",
         "@typescript-eslint/eslint-plugin": "4.12.0",
         "@typescript-eslint/parser": "4.12.0",
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0",
         "dotenv": "8.2.0",
         "eslint": "7.10.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "faker": "^5.1.0",
         "husky": "4.3.0",
         "k6": "0.0.0",
+        "mocha": "^8.2.1",
         "mockgoose": "^8.0.4",
         "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
