--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,16 +7,19 @@ on:
         branches: [main, develop]
 
 jobs:
-    integration:
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Run All E2E Tests
-              uses: actions/setup-node@v1
-              with:
-                  node-version: '12.x'
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: npm run test
+    build:
+      runs-on: ubuntu-latest
+      steps:
+          - name: Build the server
+            uses: actions/checkout@v2
+            uses: actions/setup-node@v2
+            with:
+                node-version: '12'
+          - run: npm install
+          - run: npm run build
+    test:
+      runs-on: ubuntu-latest
+      needs: [build]
+      steps:
+        - name: Run Tests on the server
+        - run: npm run test
