--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,8 +10,9 @@ jobs:
     integration:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout/v2
             - name: Build the server
-              uses: actions/checkout@v1
+              uses: actions/setup-node@v1
               with:
                   node-version: '12'
             - run: npm install --quiet
