--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,7 +10,7 @@ jobs:
     integration:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout/v2
+            - uses: actions/checkout@v2
             - name: Build the server
               uses: actions/setup-node@v1
               with:
