--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,7 +12,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v1
             - name: Setup the node
               uses: actions/setup-node@v1
               with:
@@ -23,3 +23,5 @@ jobs:
               run: npm run build
             - name: Test
               run: npm run test
+            - env:
+                  CI: true
