--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,5 +23,5 @@ jobs:
               run: npm run build
             - name: Test
               run: npm run test
-            - env:
+              env:
                   CI: true
