--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,17 +11,13 @@ jobs:
         timeout-minutes: 10
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout
               uses: actions/checkout@v1
             - name: Setup the node
               uses: actions/setup-node@v1
               with:
                   node-version: '12'
-            - name: Install
-              run: npm install
-            - name: Build
-              run: npm run build
-            - name: Test
-              run: npm run test
-              env:
+             - run: npm install
+             - run: npm run build
+             - run: npm run test
+             - env:
                   CI: true
