--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,16 +8,21 @@ on:
 
 jobs:
     integration:
-        timeout-minutes: 10
+
         runs-on: ubuntu-latest
+
+        strategy:
+            matrix:
+                node-version: [10.x, 12.x, 14.x, 15.x]
+
         steps:
-              uses: actions/checkout@v1
-            - name: Setup the node
+            - uses: actions/checkout@v2
+            - name: Setup the node ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
-                  node-version: '12'
+                  node-version: '${{ matrix.node-version }}'
              - run: npm install
              - run: npm run build
              - run: npm run test
-             - env:
+               env:
                   CI: true
