--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,7 +20,7 @@ jobs:
             - name: Setup the node ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
-                  node-version: '${{ matrix.node-version }}'
+                  node-version: ${{ matrix.node-version }}
              - run: npm install
              - run: npm run build
              - run: npm run test
