--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm run build --if-present
-            - run: set NODE_ENV=testing&&node dist/index.js&&mocha tests/**/*.js --full-trace --colors --exit
+            - run: set NODE_ENV=testing&&set PORT=5000&&node dist/index.js&&mocha tests/**/*.js --full-trace --colors --exit
