--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,11 +19,15 @@ jobs:
                 # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
         steps:
-            - uses: actions/checkout@v2
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: set NODE_ENV=testing&&set PORT=5000&&node dist/index.js&&mocha tests/**/*.js --full-trace --colors --exit
+            - name: Checkout my repository
+              uses: actions/checkout@v1
+            - name: Install dependencies
+              run: npm install
+            - name: Build files for production
+              run: npm run build
+            - name: Run and Test Server
+              run: node dist/index.js && mocha tests/**/*.js --full-trace --colors --exit
