--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "start": "node dist/index.js",
         "lint": "eslint server/**/*.ts --quiet --fix",
         "k6": "k6 run k6/smoke.js",
+        "pretest": "tsc",
         "test": "mocha tests/**/*.js --full-trace --colors --exit"
     },
     "repository": {
