--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "joi": "^17.3.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.11",
+        "newrelic": "^7.1.0",
         "swagger-jsdoc": "^6.0.1",
         "swagger-ui-express": "^4.1.6",
         "winston": "3.3.3"
