--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "connect-mongodb-session": "^2.4.1",
         "cors": "^2.8.5",
         "express": "4.17.1",
+        "express-openid-connect": "^2.2.0",
         "express-session": "^1.17.1",
         "helmet": "^4.3.1",
         "joi": "^17.3.0",
@@ -47,6 +48,7 @@
         "newrelic": "^7.1.0",
         "swagger-jsdoc": "^6.0.1",
         "swagger-ui-express": "^4.1.6",
+        "uuid": "^8.3.2",
         "winston": "3.3.3"
     },
     "devDependencies": {
